updated solution descriptions and related creatives

--- a/_data/pageconfig/our-technologies.yml
+++ b/_data/pageconfig/our-technologies.yml
@@ -9,39 +9,39 @@ members:
     image_src: &site_url /assets/img/illustrations/custom/devops-automation.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/devops-automation.jpg 2x
     url: &site_url /solutions/cloud-services
-    role: 
+    role: Centralize data, unlock and leverage actionable insights. Accelerate deployments while reducing overhead.
 
   -
     name: Application Engineering
     image_src: &site_url /assets/img/illustrations/custom/solutions-application-engineering.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-application-engineering.jpg 2x
     url: &site_url /solutions/application-engineering
-    role: 
+    role: Innovate confidently with AxOps, optimising for security, high availability, performance, and scalability.
   
   -
     name: Data Management
     image_src: &site_url /assets/img/illustrations/custom/solutions-bespoke-crm-solutions.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-bespoke-crm-solutions.jpg 2x
     url: &site_url /solutions/data-management
-    role: 
+    role: Seamlessly transition from legacy systems, dive deep into your data, and enhance decision-making.
   
   -
     name: Business Analytics
     image_src: &site_url /assets/img/illustrations/custom/solutions-business-analytics-2.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-business-analytics-2.jpg 2x
     url: &site_url /solutions/business-analytics
-    role: 
+    role: Transform insights into actionable intelligence with bespoke predictive data analytics solutions. 
 
   -
     name: "Cloud Engr. Training"
     image_src: &site_url /assets/img/illustrations/training/quantitative-research.jpg
     image_srcset: &site_url /assets/img/illustrations/training/quantitative-research.jpg 2x
     url: &site_url /solutions/technical-training
-    role: 
+    role: Level up your skills with cloud technologies and patterns for creating reliable, performant, and reactive systems.
 
   -
     name: "Quant R&D Training"
     image_src: &site_url /assets/img/illustrations/training/quantitative-development.jpg
     image_srcset: &site_url /assets/img/illustrations/training/quantitative-development.jpg 2x
     url: &site_url /solutions/quantitative-training
-    role: 
+    role: Equip yourself with the skills to tackle complex, data-driven challenges with confidence and precision.
