updated technical training services

--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -178,7 +178,7 @@
         -
           name: DevOps Engineering
           url: "#devops-engineering"
-          enabled: true
+          enabled: false
         -
           name: Blockchain Development
           url: "#blockchain-development"
