--- a/_data/pageconfig/technologies.yml
+++ b/_data/pageconfig/technologies.yml
@@ -1,8 +1,8 @@
 tagline_href: solutions
 pages:
   technologies-business-analytics.md:
-    title: Business Analytics
-    tagline: "Transform Insights into Impact: with AxOps&#8482 Business Analytics Solutions"
+    title: Data Intelligence
+    tagline: "Transform Insights into Impact: with AxOps&#8482 Data Intelligence Solutions"
 
     services:
       data-science-consulting:
