updated solutions and nav creatives

--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -44,7 +44,7 @@
         -
           name: Serverless Computing
           url: "#serverless-computing"
-          enabled: true
+          enabled: false
 
     -
       name: 'Application Engineering    <span style="visibility: hidden">.</span>'
