updated cto-as-a-service creatives

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -13,7 +13,7 @@ tagline_dynamic_delay: 85
 #tagline_cta: Strategic Data Intelligence & Executive Technical Leadership Solutions for Your Enterprise
 #tagline_cta: Strategic Data Intelligence Solutions & Interim CTO Services for Your Enterprise
 #tagline_cta: Strategic Data Intelligence Solutions & CTO Advisory Services for Your Enterprise
-tagline_cta: Data Intelligence Solutions & CTO Advisory Services for Your Enterprise
+tagline_cta: Data Intelligence Solutions & Interim Fractional CTO Services for Your Enterprise
 
 button_cta1_text: Solutions
 button_cta1_url: /solutions
