--- a/_data/pageconfig/technologies.yml
+++ b/_data/pageconfig/technologies.yml
@@ -6,8 +6,8 @@ pages:
 
     services:
       interim-fractional-cto-advisory-services:
-        title: CTO Advisory Services
-        description: "Interim or Fractional CTOs are a cost-effective alternative to full-time CTO positions, delivering on-demand technical leadership to navigate technology, development, and engineering initiatives. Our <b>CTO-as-a-Service</b> solution covers the full product development cycle from business analysis and strategic planning to guiding technical solutions, hands-on technical architecture, and setting standards for technical teams, drawing from a wealth of experience across multiple industry verticals, cloud platforms, and engineering stacks."
+        title: Interim Fractional CTO Services
+        description: "Interim or Fractional CTOs are a cost-effective alternative to full-time CTO positions, delivering on-demand technical leadership to navigate technology, development, and engineering initiatives. Our <b>CTO-as-a-Service (CaaS)</b> solution covers the full product development cycle from business analysis and strategic planning to guiding technical solutions, hands-on technical architecture, and setting standards for technical teams, drawing from a wealth of experience across multiple industry verticals, cloud platforms, and engineering stacks."
         benefits:
           - Scale software engineering teams with hands-on tech leadership
           - Align technology roadmaps and strategy with business objectives
