--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -305,7 +305,7 @@
     -
       name: The Team
       url: /meet-the-team
-      enabled: true
+      enabled: false
     -
       name: Partners
       url: /our-partners
