--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -275,7 +275,7 @@
     -
       name: Blockchain Development
       url: /blockchain-development
-      enabled: true
+      enabled: false
 
 -
   name: Pattern Library
